src/objects/ADvendio__Media_interest__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Advertiser_Agency_relation__c</fullName>
        <label>Advertiser Agency relation</label>
        <referenceTo>ADvendio__Advertiser_Agency_relation__c</referenceTo>
        <relationshipLabel>Media interests</relationshipLabel>
        <relationshipName>Media_interests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Website__c</fullName>
        <label>Website</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Media interests</relationshipLabel>
        <relationshipName>Media_interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Media Interest</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Website__c</columns>
        <columns>ADvendio__Advertiser_Agency_relation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Media interest No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>